# youtrack-cli

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REVIEW_FIXES.md  pyproject.toml
.github/workflows/: check.yml  publish.yml
docs/: contracts.md  cuj-map.md  development.md  impl-plan.md  local-youtrack.md
scripts/: configure.py  provision.py  provision_enrichment.py  provision_jewel.py  query.sh  setup.sh  youtrack.sh
skills/youtrack-cli/: LICENSE.txt  SKILL.md  skill-source.json
skills/youtrack-cli/evals/: evals.json  iteration-1.md
skills/youtrack-cli/references/: commands.md
tests/: test_auth.py  test_cli.py  test_client.py  test_commands.py  test_config.py  test_errors.py  test_fields.py  test_issues.py  test_live.py  test_onepassword.py  test_render.py
youtrack_cli/: __init__.py  __main__.py  client.py  config.py  errors.py  fields.py  issues.py  onepassword.py  query.py  render.py
youtrack_cli/cli/: __init__.py  app.py
