[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jetbrains-youtrack-cli"
version = "0.1.0"
description = "A portable command-line client for the JetBrains YouTrack REST API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "The youtrack-cli authors" }]
keywords = ["youtrack", "jetbrains", "cli", "issue-tracker", "rest-api"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Utilities",
    # UEL is a custom source-available license; not an OSI classifier.
    "License :: Other/Proprietary License",
]
dependencies = [
    "typer>=0.12,<1.0",
    "httpx>=0.27,<1.0",
    "rich>=13.7,<14.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/rock3r/youtrack-cli"
Repository = "https://github.com/rock3r/youtrack-cli"
Issues = "https://github.com/rock3r/youtrack-cli/issues"
License = "https://uelicense.eu"

[project.scripts]
yt = "youtrack_cli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.6",
    "shiv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["youtrack_cli"]

# ---- static analysis & tooling ----

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "C4",       # comprehensions
    "SIM",      # simplify
    "PL",       # pylint
    "RUF",      # ruff-specific
    "TID",      # tidy-imports
    "PTH",      # use pathlib
]
ignore = [
    "E501",     # line length handled by formatter
    "PLR2004",  # magic values in tests are fine
    "PLR0913",  # too many args (CLI helpers)
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PLR0913"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["youtrack_cli"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not live'"
markers = ["live: integration tests against a running YouTrack instance"]
